force-app/main/default/objects/Supplier_Product__c/Supplier_Product__c.object-meta.xml
<CustomObject>
    <label>Supplier Product</label>
    <nameField>
        <label>Product Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Supplier Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>