force-app/main/default/objects/Supplier_Product__c/fields/ContainerTypeName__c.field-meta.xml
<CustomField>
    <fullName>ContainerTypeName__c</fullName>
    <formula>Product__r.Container_Type__r.Name</formula>
    <label>Container Type Name</label>
    <type>Text</type>
</CustomField>