force-app/main/default/objects/Supplier_Product__c/fields/Contractor_Area__c.field-meta.xml
<CustomField>
    <fullName>Contractor_Area__c</fullName>
    <label>Contractor Area</label>
    <length>50</length>
    <type>Text</type>
</CustomField>