force-app/main/default/objects/Supplier_Product__c/fields/DefaultWeightLimit__c.field-meta.xml
<CustomField>
    <fullName>DefaultWeightLimit__c</fullName>
    <formula>Product__r.DefaultWeightLimit__c</formula>
    <label>Default Weight Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>