force-app/main/default/objects/Supplier_Product__c/fields/Enqix_Pk__c.field-meta.xml
<CustomField>
    <fullName>Enqix_Pk__c</fullName>
    <externalId>true</externalId>
    <label>Enqix PK</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>