force-app/main/default/objects/Supplier_Product__c/fields/Enqix_UID__c.field-meta.xml
<CustomField>
    <fullName>Enqix_UID__c</fullName>
    <externalId>true</externalId>
    <label>Enqix  UID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>