force-app/main/default/objects/Supplier_Product__c/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <formula>OR(End_Date__c &gt;= TODAY(), ISBLANK(End_Date__c))</formula>
    <label>Active?</label>
    <type>Checkbox</type>
</CustomField>