force-app/main/default/objects/Supplier_Product__c/fields/MinimumOrderQuantity__c.field-meta.xml
<CustomField>
    <fullName>MinimumOrderQuantity__c</fullName>
    <label>Minimum Order Quantity</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>