force-app/main/default/objects/Supplier_Product__c/fields/QuantitySoldIn__c.field-meta.xml
<CustomField>
    <fullName>QuantitySoldIn__c</fullName>
    <formula>BLANKVALUE(BLANKVALUE(MinimumOrderQuantity__c, Product__r.Quantity_Sold_In__c), 1)</formula>
    <label>Quantity Sold In</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>