force-app/main/default/objects/Supplier_Product__c/fields/Supplier__c.field-meta.xml
<CustomField>
    <fullName>Supplier__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Supplier</label>
    <referenceTo>Suppliers__c</referenceTo>
    <relationshipLabel>Supplier Products</relationshipLabel>
    <relationshipName>Supplier_Products</relationshipName>
    <type>Lookup</type>
</CustomField>