force-app/main/default/objects/Supplier_Product__c/fields/Supplier_Price__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Price__c</fullName>
    <label>Supplier Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>