force-app/main/default/objects/Supplier_Product__c/fields/supplier_product_case_safe_id__c.field-meta.xml
<CustomField>
    <fullName>supplier_product_case_safe_id__c</fullName>
    <formula>casesafeid(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>supplier product case safe id</label>
    <type>Text</type>
</CustomField>