force-app/main/default/objects/Supplier_Product__c/validationRules/RestrictCurrency.validationRule-meta.xml
<ValidationRule>
    <fullName>RestrictCurrency</fullName>
    <active>true</active>
    <errorConditionFormula>TEXT(CurrencyIsoCode) != TEXT(Supplier__r.CurrencyIsoCode)</errorConditionFormula>
    <errorDisplayField>CurrencyIsoCode</errorDisplayField>
    <errorMessage>Currency should be same as Supplier&apos;s currency</errorMessage>
</ValidationRule>