force-app/main/default/objects/Supplier_Product__c/validationRules/Supplier_Product_must_be_a_Partner_Prod.validationRule-meta.xml
<ValidationRule>
    <fullName>Supplier_Product_must_be_a_Partner_Prod</fullName>
    <active>false</active>
    <description>Supplier_Product_must_be_a_Partner_Produ</description>
    <errorConditionFormula>IF
( Supplier__r.Name &lt;&gt; &quot;First Mile Ltd&quot;,
AND
( NOT( CONTAINS( Product__r.Name , &quot;(P)&quot; ))
), FALSE)</errorConditionFormula>
    <errorMessage>If the Supplier is not First Mile Ltd then the Product must be linked to a Partner.</errorMessage>
</ValidationRule>